--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-collapsible": "^2.8.4",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
     "typescript": "^4.6.2"
   },
