--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
+    "swiper": "^8.1.1",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
