--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.2.6",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
+    "@u-wave/react-vimeo": "^0.9.7",
     "aos": "^2.3.4",
     "classnames": "^2.3.1",
     "next": "12.1.0",
