--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.6",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@types/node": "^17.0.22",
     "@types/react": "^17.0.41",
     "@u-wave/react-vimeo": "^0.9.7",
     "aos": "^2.3.4",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-collapsible": "^2.8.4",
