--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/material": "^5.2.6",
     "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@types/node": "^17.0.22",
-    "@types/react": "^17.0.41",
+    "@types/react": "18.0.1",
     "@u-wave/react-vimeo": "^0.9.7",
     "aos": "^2.3.4",
     "classnames": "^2.3.1",
